# FLENS

./: .gitignore  CMakeLists.txt  Makefile
cxxlapack/interface/: bbcsd.tcc  bdsdc.tcc  bdsqr.tcc  cgesv.tcc  chla_transtype.tcc  cposv.tcc  disna.tcc  dspcon.tcc  gbbrd.tcc  gbcon.tcc  gbequ.tcc  gbequb.tcc  gbrfs.tcc  gbsv.tcc  gbsvx.tcc  gbtf2.tcc  gbtrf.tcc  gbtrs.tcc  gebak.tcc  gebal.tcc  gebd2.tcc  gebrd.tcc  gecon.tcc  geequ.tcc  geequb.tcc  gees.tcc  geesx.tcc  geev.tcc  geevx.tcc  gegs.tcc  gegv.tcc  gehd2.tcc  gehrd.tcc  gejsv.tcc  gelq2.tcc  gelqf.tcc  gels.tcc  gelsd.tcc  gelss.tcc  gelsx.tcc  (+497 more)
flens/: flens.h
netlib/: Makefile  netlib.h
netlib/blas/: Makefile
netlib/cblas/: Makefile.in
netlib/interface/: lapack.in.h
netlib/lapack/: Makefile
src/interface/blas/: Makefile  asum.cc  axpy.cc  copy.cc  dot.cc  gbmv.cc  gemm.cc  gemv.cc  ger.cc  hbmv.cc  hemm.cc  hemv.cc  her.cc  her2.cc  her2k.cc  herk.cc  hpmv.cc  hpr.cc  hpr2.cc  iamax.cc  nrm2.cc  rot.cc  rotg.cc  sbmv.cc  scal.cc  spmv.cc  spr.cc  spr2.cc  swap.cc  symm.cc  symv.cc  syr.cc  syr2.cc  syr2k.cc  syrk.cc  tbmv.cc  tbsv.cc  tpmv.cc  tpsv.cc  trmm.cc  (+3 more)
src/interface/lapack/: Makefile
src/interface/lapack/src/: gecon.cc  geequ.cc  gees.cc  geesx.cc  geev.cc  geevx.cc  gejsv.cc  gelqf.cc  gels.cc  gelsy.cc  geqp3.cc  geqrf.cc  gerfs.cc  gesv.cc  (+26 more)
test/blas/: Makefile
test/lapack/: Makefile  dummy.cc  log  make.inc  mymain.cc  tmp
test/lapack/EIG/: Makefile  cchkee.f  schkee.f
test/lapack/LIN/: Makefile  blub.sh  cchkaa.f  cchkrfp.f  schkaa.f  schkrfp.f
test/lapack/MATGEN/: Makefile
